Prevent UI from hiding behind the gameboard

--- a/browser-roguelike/src/css/style.scss
+++ b/browser-roguelike/src/css/style.scss
@@ -17,6 +17,9 @@ body {
 	z-index: 10000000;
 
 	#ui-display {
+		position: absolute;
+		z-index: 1000;
+
 		#zoom-container {
 			display: block;
 			position: fixed;
